test_suite/alan-2022-examples/failing/007140_mutation.alan
source J begin put "6\n" . begin relax end end
